--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>My Persona Website</title>
 </head>
 <body>
-  <h1>Welcome to my page</h1>
-  <h2>A little bit about me:</h2>
+  <header><h1>Welcome to my page</h1></header>
+  <main><article><section><h2>A little bit about me:</h2>
     <p>My name is Amanda Kuiack, and I am in Set 1C of the CIT program here at BCIT. 
         I have always been curious about computers, software, and video games; however, I am also very artistic. 
         I love to draw, paint, work in photoshop, fold origami, and recently started casting jewelry and home decor in resin.
@@ -15,13 +15,13 @@
         My parents were always certain I was going to be an artist, <em>but</em> growing up I wanted to work in the video game industry. I wanted to model characters and create 
         textures and design levels. <em>Unfortunately,</em> I graduated during the 2008 recession. Without a job, I went back to school to change careers to get a job in the hospitality industry instead. I worked at a Spa 
         chain in Vacouver for almost <b>8 years</b> and became an Assistant Manager at one of their many locations. Thanks to the pandemic I was able to rethink my career after many months of feeling burnt out. I didn't want to return to Video Games, and after my dad had almost fallen victim to a software security scam, 
-        I decided I wanted to work towards a career in <b>cybersecurity</b>. So I upgrading my Math grades and applied for BCIT!</p>
-    <h3>Here are a few courses I am currently taking:</h3>
+        I decided I wanted to work towards a career in <b>cybersecurity</b>. So I upgrading my Math grades and applied for BCIT!</p></section>
+    <section><h3>Here are a few courses I am currently taking:</h3>
     <ul>
         <li><a href='https://www.bcit.ca/outlines/20211085986/' title='ACIT1620 Course outline'>Fundamental Web Technologies</a></li>
         <li>Scripting for IT</li>
         <li>Technical Math for IT</li>
-    </ul>
+    </ul></section></article></main>
 </body>
 
 </html>
