--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section>
           <h2>A little bit about me:</h2>
           <p>
-            <img src="images/Selfie.jpg" alt="Photo of myself" align="left" width="500" height="667" />
+            <img src="images/Selfie.jpg" alt="Photo of myself" align="left" width="250" height="333" />
             My name is Amanda Kuiack, and I am in Set 1C of the CIT program here
             at BCIT. I have always been curious about computers, software, and
             video games; however, I am also very artistic. I love to draw,
@@ -35,14 +35,11 @@
           </p>
         </section>
         <section>
-          <h3>Here are a few courses I am currently taking:</h3>
+          <a href="https://www.bcit.ca" title="BCIT Website"><img src="images/BCITlogo.png" alt="BCIT Logo" width="150" height="150" /></a>
+          <h3>Here are a few courses I am currently taking at BCIT:</h3>
           <ul>
             <li>
-              <a
-                href="https://www.bcit.ca/outlines/20211085986/"
-                title="ACIT1620 Course outline"
-                >Fundamental Web Technologies</a
-              >
+              <a href="https://www.bcit.ca/outlines/20211085986/" title="ACIT1620 Course outline">Fundamental Web Technologies</a>
             </li>
             <li>Scripting for IT</li>
             <li>Technical Math for IT</li>
