Format so Logo under selfie

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section>
           <h2>A little bit about me:</h2>
           <p>
-            <img src="images/Selfie.jpg" alt="Photo of myself" align="left" width="250" height="333" />
+            <img src="images/Selfie.jpg" alt="Photo of myself" align="left" width="150" height="200" />
             My name is Amanda Kuiack, and I am in Set 1C of the CIT program here
             at BCIT. I have always been curious about computers, software, and
             video games; however, I am also very artistic. I love to draw,
@@ -19,7 +19,9 @@
             jewelry and home decor in resin. Resin is actually really fun to
             work with, but also <strong>very dangerous</strong> due to the
             fumes. But it is cool to create a 3D piece of art that you can share
-            with others. My parents were always certain I was going to be an
+            with others.
+          </p>
+          <p>My parents were always certain I was going to be an
             artist, <em>but</em> growing up I wanted to work in the video game
             industry. I wanted to model characters and create textures and
             design levels. <em>Unfortunately,</em> I graduated during the 2008
@@ -35,7 +37,14 @@
           </p>
         </section>
         <section>
-          <a href="https://www.bcit.ca" title="BCIT Website"><img src="images/BCITlogo.png" alt="BCIT Logo" width="150" height="150" /></a>
+          <p>
+              <br>
+              <br>
+              <br>
+              <a href="https://www.bcit.ca" title="BCIT Website">
+                <img src="images/BCITlogo.png" alt="BCIT Logo" align="left" width="150" height="150" />
+            </a>
+              
           <h3>Here are a few courses I am currently taking at BCIT:</h3>
           <ul>
             <li>
@@ -44,6 +53,7 @@
             <li>Scripting for IT</li>
             <li>Technical Math for IT</li>
           </ul>
+        </p>
         </section>
       </article>
     </main>
