--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>My Persona Website</title>
+    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header><h1>Welcome to my page</h1></header>
@@ -44,7 +45,6 @@
               <a href="https://www.bcit.ca" title="BCIT Website">
                 <img src="images/BCITlogo.png" alt="BCIT Logo" align="left" width="150" height="150" />
             </a>
-              
           <h3>Here are a few courses I am currently taking at BCIT:</h3>
           <ul>
             <li>
