Create School page, add nav

--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8" />
     <title>My Persona Website</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <header><h1>Welcome to my page</h1></header>
+    <nav>
+      <a href="courses.html">Courses</a> |
+      <a href="school.html">School</a>
+    </nav>
     <main>
       <article>
         <section>
           <h2>A little bit about me:</h2>
           <p>
-            <img src="images/Selfie.jpg" alt="Photo of myself" align="left" width="150" height="200" />
+            <img src="images/Selfie.jpg" alt="Photo of myself" width="150" height="200" />
             My name is Amanda Kuiack, and I am in Set 1C of the CIT program here
             at BCIT. I have always been curious about computers, software, and
             video games; however, I am also very artistic. I love to draw,
@@ -37,13 +42,11 @@
             Math grades and applied for BCIT!
           </p>
         </section>
-        <section>
+        <aside>
           <p>
-              <br>
-              <br>
-              <br>
+              
               <a href="https://www.bcit.ca" title="BCIT Website">
-                <img src="images/BCITlogo.png" alt="BCIT Logo" align="left" width="150" height="150" />
+                <img src="images/BCITlogo.png" alt="BCIT Logo" width="150" height="150" />
             </a>
           <h3>Here are a few courses I am currently taking at BCIT:</h3>
           <ul>
@@ -54,7 +57,7 @@
             <li>Technical Math for IT</li>
           </ul>
         </p>
-        </section>
+      </aside>
       </article>
     </main>
   </body>
