move courses and school to misc folder, update links

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header><h1>Welcome to my page</h1></header>
     <nav>
-      <a href="courses.html">Courses</a> |
-      <a href="school.html">School</a>
+      <a href="misc/courses.html">Courses</a> |
+      <a href="misc/school.html">School</a>
     </nav>
     <main>
       <article>
