--- a/misc/school.html
+++ b/misc/school.html
@@ -10,7 +10,7 @@
     
       <header><h1>School</h1></header>
       <nav>
-        <a href="index.html">Index</a> |
+        <a href="../index.html">Index</a> |
         <a href="courses.html">Courses</a> 
         </nav>
       <main>
